tests/negative/comptime_statement_runtime_expr.ora
contract ComptimeStatementRuntimeExpr {
    pub fn run(input: u256) -> u256 {
        comptime {
            input;
        }
        return 1;
    }
}
